[gd_scene load_steps=3 format=2]

[ext_resource path="res://tool/GameIntelligence/GIFontMono.tres" type="DynamicFont" id=1]
[ext_resource path="res://tool/GameIntelligence/StatEntry.gd" type="Script" id=2]

[node name="StatEntry" type="VBoxContainer"]
margin_right = 1157.0
margin_bottom = 209.0
script = ExtResource( 2 )

[node name="FilterLabel" type="Label" parent="."]
margin_right = 1250.0
margin_bottom = 14.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 18.0
margin_right = 1250.0
margin_bottom = 122.0
custom_constants/separation = 80

[node name="VBoxContainer4" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 100.0
margin_bottom = 104.0
rect_min_size = Vector2( 100, 0 )

[node name="PinStatsButton" type="Button" parent="HBoxContainer/VBoxContainer4"]
margin_right = 100.0
margin_bottom = 20.0
focus_mode = 0
text = "Pin"

[node name="DeleteStatsButton" type="Button" parent="HBoxContainer/VBoxContainer4"]
visible = false
margin_top = 73.0
margin_right = 100.0
margin_bottom = 130.0
focus_mode = 0
text = "Delete"

[node name="GridContainer" type="GridContainer" parent="HBoxContainer"]
margin_left = 180.0
margin_right = 470.0
margin_bottom = 104.0
rect_min_size = Vector2( 290, 0 )
columns = 2

[node name="Label" type="Label" parent="HBoxContainer/GridContainer"]
margin_top = 4.0
margin_right = 116.0
margin_bottom = 18.0
text = "Started / Finished:"

[node name="SessionCountLabel" type="Label" parent="HBoxContainer/GridContainer"]
margin_left = 120.0
margin_right = 290.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
align = 2

[node name="Label6" type="Label" parent="HBoxContainer/GridContainer"]
margin_top = 31.0
margin_right = 116.0
margin_bottom = 45.0
text = "Finish Rate:"

[node name="FinishRateLabel" type="Label" parent="HBoxContainer/GridContainer"]
margin_left = 120.0
margin_top = 27.0
margin_right = 290.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
align = 2

[node name="Label3" type="Label" parent="HBoxContainer/GridContainer"]
margin_top = 58.0
margin_right = 116.0
margin_bottom = 72.0
text = "Won / Lost:"

[node name="WonCountLabel" type="Label" parent="HBoxContainer/GridContainer"]
margin_left = 120.0
margin_top = 54.0
margin_right = 290.0
margin_bottom = 77.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
align = 2

[node name="Label2" type="Label" parent="HBoxContainer/GridContainer"]
margin_top = 85.0
margin_right = 116.0
margin_bottom = 99.0
text = "Win Rate:"

[node name="WinrateLabel" type="Label" parent="HBoxContainer/GridContainer"]
margin_left = 120.0
margin_top = 81.0
margin_right = 290.0
margin_bottom = 104.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
align = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 550.0
margin_right = 730.0
margin_bottom = 104.0
rect_min_size = Vector2( 180, 0 )

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 14.0
text = "Session Length"

[node name="GridContainer2" type="GridContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 180.0
margin_bottom = 59.0
columns = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/GridContainer2"]
margin_top = 4.0
margin_right = 51.0
margin_bottom = 18.0
text = "Average"

[node name="AverageSessionLengthLabel" type="Label" parent="HBoxContainer/VBoxContainer/GridContainer2"]
margin_left = 55.0
margin_right = 180.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
align = 2

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer/GridContainer2"]
margin_top = 27.0
margin_right = 51.0
margin_bottom = 41.0
text = "Median"

[node name="MedianSessionLengthLabel" type="Label" parent="HBoxContainer/VBoxContainer/GridContainer2"]
margin_left = 55.0
margin_top = 27.0
margin_right = 180.0
margin_bottom = 41.0
size_flags_horizontal = 3
align = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 810.0
margin_right = 990.0
margin_bottom = 104.0
rect_min_size = Vector2( 180, 0 )

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_right = 180.0
margin_bottom = 14.0
text = "Run Length"

[node name="GridContainer2" type="GridContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 180.0
margin_bottom = 68.0
columns = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/GridContainer2"]
margin_top = 4.0
margin_right = 51.0
margin_bottom = 18.0
text = "Average"

[node name="AverageRunLengthLabel" type="Label" parent="HBoxContainer/VBoxContainer2/GridContainer2"]
margin_left = 55.0
margin_right = 180.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
align = 2

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer2/GridContainer2"]
margin_top = 31.0
margin_right = 51.0
margin_bottom = 45.0
text = "Median"

[node name="MedianRunLengthLabel" type="Label" parent="HBoxContainer/VBoxContainer2/GridContainer2"]
margin_left = 55.0
margin_top = 27.0
margin_right = 180.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
align = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 1070.0
margin_right = 1250.0
margin_bottom = 104.0
rect_min_size = Vector2( 180, 0 )

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer3"]
margin_right = 180.0
margin_bottom = 14.0
text = "Battle Ability Uses"

[node name="GridContainer2" type="GridContainer" parent="HBoxContainer/VBoxContainer3"]
margin_top = 18.0
margin_right = 180.0
margin_bottom = 68.0
columns = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer3/GridContainer2"]
margin_top = 4.0
margin_right = 51.0
margin_bottom = 18.0
text = "Average"

[node name="AverageBattleAbilityUsesLabel" type="Label" parent="HBoxContainer/VBoxContainer3/GridContainer2"]
margin_left = 55.0
margin_right = 180.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
align = 2

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer3/GridContainer2"]
margin_top = 31.0
margin_right = 51.0
margin_bottom = 45.0
text = "Median"

[node name="MedianBattleAbilityUsesLabel" type="Label" parent="HBoxContainer/VBoxContainer3/GridContainer2"]
margin_left = 55.0
margin_top = 27.0
margin_right = 180.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
align = 2

[connection signal="pressed" from="HBoxContainer/VBoxContainer4/DeleteStatsButton" to="." method="_on_DeleteStatsButton_pressed"]
